<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InspiriAppBeta</string>
    <string name="action_settings">Set Background</string>
    <string name="title_section1">Quotes</string>
    <string name="title_section2">Contacts</string>
    <string name="title_section3">Timer</string>
    <string name="title_section4">Wish List</string>
    <string name="Fragment1Text1">Quotes go here sdjfklnawef iasdjklfvc asdkl gtlkjesdfdflkvassdjklgfnasdjklhflkasdenflkjasesje5tkldcj v  ihsjfio;asdjol;ik</string>
    <string name="Fragment2Text1">Contacts</string>
    <string name="Fragment3Text1">05:00</string>
    <string name="Fragment4Text1">Wish List</string>
    <string name="Fragment1ReadToMeButton">Read to me</string>
    <string name="Fragment1RefreshButton">Refresh</string>
    <string name="WishListButtonAdd">Add</string>
    <string name="WishListAddTextHint">New Wish</string>
    <string name="EditTextBoxHint">New Wish</string>
    <string name="IrelandFlagDesc">The Ireland Flag</string>
    <string name="UKFlagDesc">The UK Flag</string>
    <string name="ChildlineROILogoDesc">Childline logo for contacts list</string>
    <string name="ChildlineUKLogoDesc">ChildlineUk logo for contacts list</string>
    <string name="SamaritansLogoDesc">Samaritans logo for contacts list</string>
    <string name="OneLifeLogoDesc">1 Life logo for contacts list</string>
    <string name="PapyrusLogoDesc">Papyrus logo for contacts list</string>
    <string name="LGBTHelplineLogoDesc">LGBTHelpline logo for contacts list</string>
    <string name="ReachoutLogoDesc">Reachout.com logo for contacts list</string>
    <string name="SpunoutLogoDesc">Spunout.com logo for contacts list</string>
    <string name="YoungMindsLogoDesc">Youngminds.org.uk logo for contacts list</string>
    <string name="MindYourHeadLogoDesc">Mindyourheadstudy.com logo for contacts list</string>
    <string name="Fragment1NameTextView">-Name</string>
    <string name="imageEditorRotateButton">Rotate</string>
    <string name="imageEditorAcceptButton">Accept</string>
    <string name="imageEditorCancelButton">Cancel</string>
    

</resources>