<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ChildlineROILayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/ContactButtonChildlineROI"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:background="@drawable/calliconbackground"
                    android:minWidth="64dip"
                    android:onClick="ChildlineROICall"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                     />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/childlinelayer"
                    android:contentDescription="@string/ChildlineROILogoDesc"
                    android:layout_gravity="center" />
                <ImageView
                    android:layout_width="60dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/IrelandFlagDesc"
                    android:src="@drawable/irelandflag"
                    android:paddingLeft="10dip" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ChildlineUKLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/ContactButtonChildlineUK"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:onClick="ChildlineUKCall"
                    android:background="@drawable/calliconbackground" 
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp" />

                <ImageView
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/childlineuklayer"
                    android:contentDescription="@string/ChildlineUKLogoDesc"
                    android:layout_gravity="center_vertical" />
                
                <ImageView
                    android:layout_width="60dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:contentDescription="@string/UKFlagDesc"
                    android:src="@drawable/ukflag" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/SamROILayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/ContactButtonSamROI"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:background="@drawable/calliconbackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:onClick="SamROICall" />

                <ImageView
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/samaritanslayer"
                    android:contentDescription="@string/SamaritansLogoDesc"
                    android:layout_gravity="center_vertical" />
                
                <ImageView
                    android:layout_width="60dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:contentDescription="@string/IrelandFlagDesc"
                    android:src="@drawable/irelandflag" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/SamUKLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/ContactButtonSamUK"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:background="@drawable/calliconbackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:onClick="SamUKCall" />

                <ImageView
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/samaritanslayer"
                    android:contentDescription="@string/SamaritansLogoDesc"
                    android:layout_gravity="center_vertical" />
                
                <ImageView
                    android:layout_width="60dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:contentDescription="@string/UKFlagDesc"
                    android:src="@drawable/ukflag" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/OneLifeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/ContactButton1Life"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:background="@drawable/calliconbackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:onClick="OneLifeCall" />

                <ImageView
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/onelifelayer"
                    android:contentDescription="@string/OneLifeLogoDesc"
                    android:layout_gravity="center_vertical"
                     />
                <ImageView
                    android:layout_width="60dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/IrelandFlagDesc"
                    android:src="@drawable/irelandflag" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/PapyrusLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/ContactButtonPapyrus"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:background="@drawable/calliconbackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:onClick="PapyrusCall" />

                <ImageView
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/papyruslayer"
                    android:contentDescription="@string/PapyrusLogoDesc"
                    android:layout_gravity="center_vertical"
                     />
                
                <ImageView
                    android:layout_width="60dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/UKFlagDesc"
                    android:src="@drawable/ukflag" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LGBTHelplineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/ContactButtonNSP"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:background="@drawable/calliconbackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:onClick="LGBTHelplineCall" />

                 <ImageView
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/lgbt_layer"
                    android:contentDescription="@string/LGBTHelplineLogoDesc"
                    android:layout_gravity="center_vertical"
                     />
                 <ImageView
                    android:layout_width="60dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/IrelandFlagDesc"
                    android:src="@drawable/irelandflag" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LlgsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/ContactButtonLifeline"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:background="@drawable/calliconbackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:onClick="LlgsCall" />

                <ImageView
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/llgslayer"
                    android:contentDescription="@string/LGBTHelplineLogoDesc"
                    android:layout_gravity="center_vertical"
                     />
                
                <ImageView
                    android:layout_width="60dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/UKFlagDesc"
                    android:src="@drawable/ukflag" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ReachoutLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/ContactButtonReachout"
                    android:layout_width="60dp"
                    android:layout_height="80dip"
                    android:onClick="ReachoutWeb"
                    android:background="@drawable/wifibackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp" />

                <ImageView 
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/reachoutlayer"
                    android:contentDescription="@string/ReachoutLogoDesc"
                    android:layout_gravity="center_vertical"
                    />
                
                <ImageView 
                    android:layout_width="60dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/irelandflag"
                    android:contentDescription="@string/IrelandFlagDesc"
                    android:layout_gravity="center_vertical"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/SpunoutLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/QuoteRefreshButton"
                    android:layout_width="60dip"
                    android:layout_height="80dip"
                    android:background="@drawable/wifibackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:onClick="SpunoutWeb" />

                <ImageView 
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/spunoutlayer"
                    android:contentDescription="@string/SpunoutLogoDesc"
                    android:layout_gravity="center_vertical"
                    />
                
                <ImageView 
                    android:layout_width="60dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/irelandflag"
                    android:contentDescription="@string/IrelandFlagDesc"
                    android:layout_gravity="center_vertical"
                    />


            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/YoungMindsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/ContactButtonYoungMinds"
                    android:layout_width="60dip"
                    android:layout_height="80dip"
                    android:background="@drawable/wifibackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:onClick="YoungMindsWeb" />

                <ImageView 
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/youngmindslayer"
                    android:contentDescription="@string/YoungMindsLogoDesc"
                    android:layout_gravity="center_vertical"
                    />
                
                <ImageView 
                    android:layout_width="60dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/ukflag"
                    android:contentDescription="@string/UKFlagDesc"
                    android:layout_gravity="center_vertical"
                    />


            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/MindYourHeadLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/customborder" >

                <Button
                    android:id="@+id/ContactButtonMindYourHead"
                    android:layout_width="60dip"
                    android:layout_height="80dip"
                    android:background="@drawable/wifibackground"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:onClick="MindYourHeadWeb" />

                <ImageView 
                    android:layout_width="160dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/mindyourheadlayer"
                    android:contentDescription="@string/MindYourHeadLogoDesc"
                    android:layout_gravity="center_vertical"
                    />
                
                <ImageView 
                    android:layout_width="60dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/irelandflag"
                    android:contentDescription="@string/IrelandFlagDesc"
                    android:layout_gravity="center_vertical"
                    />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>